conecao banco dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
-quarkus.datasource.password = mysecretpassword
+quarkus.datasource.password = 42Fcgcb31dc4411fD2DCEE22BBEDaa5b
 #quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.jdbc.url = jdbc:postgresql://monorail.proxy.rlwy.net:17456/railway
 quarkus.devservices.enabled=false
 
 quarkus.hibernate-orm.database.generation = none
