--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,6 @@ quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 # Define allowed headers (comma-separated list)
 quarkus.http.cors.headers=Content-Type,Authorization
 
+quarkus.http.root-path=/teste
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
