--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,17 @@ quarkus.hibernate-orm.database.generation = none
 
 
 
-# Enable CORS for all endpoints
-quarkus.http.cors=true
-
-# Define allowed origins (comma-separated list) or use "*"
-quarkus.http.cors.origins=*
-
-# Define allowed methods (comma-separated list)
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-
-# Define allowed headers (comma-separated list)
-quarkus.http.cors.headers=Content-Type,Authorization
+## Enable CORS for all endpoints
+#quarkus.http.cors=true
+#
+## Define allowed origins (comma-separated list) or use "*"
+#quarkus.http.cors.origins=*
+#
+## Define allowed methods (comma-separated list)
+#quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+#
+## Define allowed headers (comma-separated list)
+#quarkus.http.cors.headers=Content-Type,Authorization
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
