--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ quarkus.datasource.password = 42Fcgcb31dc4411fD2DCEE22BBEDaa5b
 #quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
 quarkus.datasource.jdbc.url = jdbc:postgresql://monorail.proxy.rlwy.net:17456/railway
 quarkus.devservices.enabled=false
+quarkus.http.host=byauroraback-production.up.railway.app
 
 quarkus.hibernate-orm.database.generation = none
 
