--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.devservices.enabled=false
 quarkus.http.host=byauroraback-production.up.railway.app
 
 quarkus.hibernate-orm.database.generation = none
+quarkus.http.port=9123
 
 
 
