--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,22 +4,21 @@ quarkus.datasource.password = 42Fcgcb31dc4411fD2DCEE22BBEDaa5b
 #quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/postgres
 quarkus.datasource.jdbc.url = jdbc:postgresql://monorail.proxy.rlwy.net:17456/railway
 quarkus.devservices.enabled=false
-#quarkus.http.host=byauroraback-production.up.railway.app
 quarkus.http.port=8080
 quarkus.hibernate-orm.database.generation = none
 
 
 
 
-## Enable CORS for all endpoints
-#quarkus.http.cors=true
-#
-## Define allowed origins (comma-separated list) or use "*"
-#quarkus.http.cors.origins=*
-#
-## Define allowed methods (comma-separated list)
-#quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-#
-## Define allowed headers (comma-separated list)
-#quarkus.http.cors.headers=Content-Type,Authorization
+# Enable CORS for all endpoints
+quarkus.http.cors=true
+
+# Define allowed origins (comma-separated list) or use "*"
+quarkus.http.cors.origins=*
+
+# Define allowed methods (comma-separated list)
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+
+# Define allowed headers (comma-separated list)
+quarkus.http.cors.headers=Content-Type,Authorization
 
